--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -26,19 +26,16 @@
             <ul>
                 <li class='titleMenu menuNav' data='/home'>Accueil</li>
                 <li class='titleMenu'>
-                    Services
+                    Amis
                     <ul>
-                        <li><div>Services 1</div></li>
-                        <li><div>Services 2</div></li>
+                        <li class='menuNav' data='/usr/searchFriends'><div>Rechercher un ami</div></li>
+                        <li class='menuNav' data='/usr/myFriends'><div>Mes amis</div></li>
                     </ul>
                 </li>
                 <li class='titleMenu'>
                     Bibliothèque
                     <ul>
                         <li class='menuNav' data='/produit/mesProduits'><div>Mes produits</div></li>
-                        <li><div></div></li>
-                        <li><div></div></li>
-                        <li><div>Projets 4</div></li>
                     </ul>
                 </li>
                 <li class='titleMenu'>
