Arborescence for Friends

--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -28,8 +28,8 @@
                 <li class='titleMenu'>
                     Amis
                     <ul>
-                        <li class='menuNav' data='/usr/searchFriends'><div>Rechercher un ami</div></li>
-                        <li class='menuNav' data='/usr/myFriends'><div>Mes amis</div></li>
+                        <li class='menuNav' data='/Friends/searchFriends'><div>Rechercher un ami</div></li>
+                        <li class='menuNav' data='/Friends/myFriends'><div>Mes amis</div></li>
                     </ul>
                 </li>
                 <li class='titleMenu'>
