Rechercher un utilisateur et lui envoyer une demande d'ami

--- a/public/stylesheets/main/style.scss
+++ b/public/stylesheets/main/style.scss
@@ -1,5 +1,6 @@
-@import "../sass/login";
-@import "../sass/fontWeb";
-@import "../sass/template";
-@import "../sass/userInformations";
+@import '../sass/login';
+@import '../sass/fontWeb';
+@import '../sass/template';
+@import '../sass/userInformations';
+@import '../sass/friends';
 
