--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -95,7 +95,8 @@ body {
         }
     }
 
-    .generalContent {
+    .generalContent,
+    .generalContentSearchUsers {
         background-color: $color-font-content-gray;
         width: 80%;
         margin: 0px auto;
@@ -107,5 +108,30 @@ body {
             text-align: center;
         }
     }
+}
+
+.msgInfo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 600px;
+    margin-left: -300px;
+    text-align: center;
+    font-size: 20px;
+    padding: 3px;
+    border-radius: 5px;
+    opacity: 0;
+}
+
+.msgInfoOk {
+    color: $color-success;
+    background-color: $color-background-success;
+    border-color: $color-border-success;
+}
+
+.msgInfoNok {
+    color: $color-danger;
+    background-color: $color-background-danger;
+    border-color: $color-border-danger;
 }
 
