--- a/views/UserViews/login.html.twig
+++ b/views/UserViews/login.html.twig
@@ -18,7 +18,7 @@
         <h1 class='titleForm'></h1>
 
         <form method='POST' class="formLogin">
-            <input type='text' name='pseudo' class='pseudo' required />
+            <input type='text' name='pseudo' class='pseudo' required minlength='3' />
             <input type='password' name='pwd' class='pwd' minlength='7' required />
 
             {# if registrer #}
