Liste les invitations en attentes de réponse et reçues

--- a/public/stylesheets/sass/_base.scss
+++ b/public/stylesheets/sass/_base.scss
@@ -10,6 +10,7 @@ $color-corporate-two: #FF6664;
 $color-corporate-three: #FFFFFF;
 $color-font-content-gray: #CCCCCC;
 $color-font-content-white: #FFFFFF;
+$color-subTitle: #A52A2A;
 
 //ALERT
 $color-success: #3C763D;
