--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -31,6 +31,7 @@
                     Amis
                     <ul>
                         <li class='menuNav' data='/friends/searchUsers'><div>Rechercher un ami</div></li>
+                        <li class='menuNav' data='/friends/seeInvitation'><div>Mes invitations</div></li>
                         <li class='menuNav' data='/friends/myFriends'><div>Mes amis</div></li>
                     </ul>
                 </li>
@@ -76,6 +77,6 @@
     <input type='hidden' name='userName' value='{{ result.pseudoUser }}'>
 </form>
 
-<div class='msgInfo'>Test</div>
+<div class='msgInfo'></div>
 
 </html>
