--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -96,7 +96,8 @@ body {
     }
 
     .generalContent,
-    .generalContentSearchUsers {
+    .generalContentSearchUsers,
+    .generalContentSeeInvitation {
         background-color: $color-font-content-gray;
         width: 80%;
         margin: 0px auto;
