--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -57,7 +57,7 @@
         </div>
 
         <footer>
-            <div id='footer'>&#64;2017 LibrarizeMe  {{ result.etatMenu }} {{ result['etatMenu'] }} {{ result.getEtatMenu }}</div>
+            <div id='footer'>&copy; LibrarizeMe 2017  {{ result.etatMenu }} {{ result['etatMenu'] }} {{ result.getEtatMenu }}</div>
         </footer>
     </body>
 
