--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -7,7 +7,6 @@ body {
         font-family: 'librarize';
         margin-left: auto;
         margin-right: auto;
-        color: rebeccapurple;
         text-align: center;
         font-size: 60px;
 
@@ -39,14 +38,15 @@ body {
     }
 
     footer {
-        position: absolute;
-        bottom: 5px;
+        position: fixed;
+        bottom: 0px;
         width: 80%;
         text-align: center;
         color: $color-corporate-two;
-        margin-left: 10px;
         font-size: 14px;
         right: 10%;
+        background-color: $color-corporate-one;
+        padding: 5px 0px;
     }
 
     .menuDiv {
@@ -112,7 +112,7 @@ body {
 }
 
 .msgInfo {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     width: 600px;
