--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,14 +31,14 @@ button { color: #fff; background-color: #5cb85c; border-color: #4cae4c; display:
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
-body header { font-family: 'librarize'; margin-left: auto; margin-right: auto; color: rebeccapurple; text-align: center; font-size: 60px; }
+body header { font-family: 'librarize'; margin-left: auto; margin-right: auto; text-align: center; font-size: 60px; }
 body header .nameOrganization { display: inline-block; color: #FFFFFF; }
 body header .nameOrganization:before { content: ""; }
 body header .libraryLeftIcon { display: inline-block; color: #FF6664; }
 body header .libraryLeftIcon:before { content: ""; }
 body header .libraryRightIcon { display: inline-block; color: #FF6664; }
 body header .libraryRightIcon:before { content: ""; }
-body footer { position: absolute; bottom: 5px; width: 80%; text-align: center; color: #FF6664; margin-left: 10px; font-size: 14px; right: 10%; }
+body footer { position: fixed; bottom: 0px; width: 80%; text-align: center; color: #FF6664; font-size: 14px; right: 10%; background-color: #092D3D; padding: 5px 0px; }
 body .menuDiv { background-color: #CCCCCC; width: 80%; margin: 0px auto; height: 35px; line-height: 35px; border-radius: 7px; text-align: center; font-weight: bold; }
 body .menuDiv ul { padding: 0px; }
 body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 24%; cursor: pointer; vertical-align: top; position: relative; }
@@ -49,7 +49,7 @@ body .menuDiv ul a { color: black; text-decoration: none; }
 body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
 body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child { text-align: center; }
 
-.msgInfo { position: absolute; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; }
+.msgInfo { position: fixed; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; }
 
 .msgInfoOk { color: #3C763D; background-color: #DFF0F8; border-color: #D6D9C6; }
 
@@ -83,5 +83,10 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentSearchUsers .resultSearchUser .oneUser span { font-size: 24px; font-weight: bold; }
 .generalContentSearchUsers .resultSearchUser .oneUser span img { cursor: pointer; display: inline-block; vertical-align: middle; padding-bottom: 7px; padding-left: 10px; }
 
+.generalContentSeeInvitation { min-height: 300px; }
 .generalContentSeeInvitation .content { width: 80%; margin: 0px auto; }
-.generalContentSeeInvitation .content .invitationType div { font-weight: bold; font-size: 20px; color: #A52A2A; }
+.generalContentSeeInvitation .content .invitationType div:first-child { font-weight: bold; font-size: 20px; color: #A52A2A; padding: 20px 0px; }
+.generalContentSeeInvitation .content .invitationType .oneUser { width: 19%; display: inline-block; padding-bottom: 30px; }
+.generalContentSeeInvitation .content .invitationType .oneUser img { display: block; margin: 0px auto; }
+.generalContentSeeInvitation .content .invitationType .oneUser span { font-size: 24px; font-weight: bold; text-align: center; display: block; }
+.generalContentSeeInvitation .content .invitationType .oneUser span img { cursor: pointer; display: inline-block; vertical-align: middle; width: 18px; }
