--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -97,7 +97,8 @@ body {
 
     .generalContent,
     .generalContentSearchUsers,
-    .generalContentSeeInvitation {
+    .generalContentSeeInvitation,
+    .generalContentMyFriends {
         background-color: $color-font-content-gray;
         width: 80%;
         margin: 0px auto;
