--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,8 +46,8 @@ body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; height: 40px; border-radius: 5px; margin-top: 5px; line-height: 35px; box-shadow: inset -6px -6px 5px 0px #656565; }
 body .menuDiv ul .titleMenu ul li div { width: auto; padding-left: 15px; }
 body .menuDiv ul a { color: black; text-decoration: none; }
-body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
-body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child { text-align: center; }
+body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
+body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child, body .generalContentMyFriends h1:first-child { text-align: center; }
 
 .msgInfo { position: fixed; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; }
 
@@ -83,10 +83,14 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentSearchUsers .resultSearchUser .oneUser span { font-size: 24px; font-weight: bold; }
 .generalContentSearchUsers .resultSearchUser .oneUser span img { cursor: pointer; display: inline-block; vertical-align: middle; padding-bottom: 7px; padding-left: 10px; }
 
-.generalContentSeeInvitation { min-height: 300px; }
-.generalContentSeeInvitation .content { width: 80%; margin: 0px auto; }
-.generalContentSeeInvitation .content .invitationType div:first-child { font-weight: bold; font-size: 20px; color: #A52A2A; padding: 20px 0px; }
-.generalContentSeeInvitation .content .invitationType .oneUser { width: 19%; display: inline-block; padding-bottom: 30px; }
-.generalContentSeeInvitation .content .invitationType .oneUser img { display: block; margin: 0px auto; }
-.generalContentSeeInvitation .content .invitationType .oneUser span { font-size: 24px; font-weight: bold; text-align: center; display: block; }
-.generalContentSeeInvitation .content .invitationType .oneUser span img { cursor: pointer; display: inline-block; vertical-align: middle; width: 18px; }
+.generalContentMyFriends { text-align: center; }
+
+.generalContentMyFriends, .generalContentSeeInvitation { min-height: 300px; }
+.generalContentMyFriends .content, .generalContentSeeInvitation .content { width: 80%; margin: 0px auto; }
+.generalContentMyFriends .content .invitationType, .generalContentSeeInvitation .content .invitationType { color: black; }
+.generalContentMyFriends .content .invitationType div:first-child, .generalContentSeeInvitation .content .invitationType div:first-child { font-weight: bold; font-size: 20px; color: #A52A2A; padding: 20px 0px; }
+.generalContentMyFriends .content .invitationType .noBodyFriend, .generalContentSeeInvitation .content .invitationType .noBodyFriend { color: #A52A2A; padding: 20px 0px; font-size: 22px !important; font-weight: bold; }
+.generalContentMyFriends .content .invitationType .oneUser, .generalContentSeeInvitation .content .invitationType .oneUser { width: 19%; display: inline-block; padding-bottom: 30px; }
+.generalContentMyFriends .content .invitationType .oneUser img, .generalContentSeeInvitation .content .invitationType .oneUser img { display: block; margin: 0px auto; }
+.generalContentMyFriends .content .invitationType .oneUser span, .generalContentSeeInvitation .content .invitationType .oneUser span { font-size: 24px; font-weight: bold; text-align: center; display: block; color: black; }
+.generalContentMyFriends .content .invitationType .oneUser span img, .generalContentSeeInvitation .content .invitationType .oneUser span img { cursor: pointer; display: inline-block; vertical-align: middle; width: 18px; }
