--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -13,6 +13,7 @@
         <script src="../javascripts/login.js"></script>
         <script src="../javascripts/userInformations.js"></script>
         <script src="../javascripts/friends.js"></script>
+        <script src="../javascripts/library.js"></script>
     </head>
 
     <body>
@@ -38,7 +39,8 @@
                 <li class='titleMenu'>
                     Bibliothèque
                     <ul>
-                        <li class='menuNav' data='/produit/mesProduits'><div>Mes produits</div></li>
+                        <li class='menuNav' data='/product/search'><div>Recherche</div></li>
+                        <li class='menuNav' data='/product/'><div>Mes produits</div></li>
                     </ul>
                 </li>
                 <li class='titleMenu'>
