--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -245,7 +245,8 @@ body {
   body .generalContent,
   body .generalContentSearchUsers,
   body .generalContentSeeInvitation,
-  body .generalContentMyFriends {
+  body .generalContentMyFriends,
+  body .generalContentProductSearch {
     background-color: #CCCCCC;
     width: 80%;
     margin: 0px auto;
@@ -254,7 +255,8 @@ body {
     body .generalContent h1:first-child,
     body .generalContentSearchUsers h1:first-child,
     body .generalContentSeeInvitation h1:first-child,
-    body .generalContentMyFriends h1:first-child {
+    body .generalContentMyFriends h1:first-child,
+    body .generalContentProductSearch h1:first-child {
       text-align: center; }
 
 .msgInfo {
@@ -522,5 +524,46 @@ button {
             display: inline-block;
             vertical-align: middle;
             width: 18px; }
+
+.generalContentProductSearch {
+  text-align: center; }
+  .generalContentProductSearch .resultSearch {
+    margin-top: 50px;
+    font-size: 24px;
+    font-weight: bold; }
+    .generalContentProductSearch .resultSearch .oneProduct {
+      width: 20%;
+      display: inline-block;
+      padding-bottom: 50px; }
+      .generalContentProductSearch .resultSearch .oneProduct img {
+        display: block;
+        margin: 0px auto;
+        cursor: pointer; }
+      .generalContentProductSearch .resultSearch .oneProduct span img {
+        cursor: pointer;
+        display: inline-block;
+        vertical-align: middle;
+        padding-bottom: 7px;
+        padding-left: 10px; }
+      .generalContentProductSearch .resultSearch .oneProduct span[title]:hover:before {
+        cursor: default;
+        content: attr(title);
+        margin-left: 0px;
+        margin-top: 0px;
+        position: absolute;
+        z-index: 20;
+        white-space: nowrap;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        -moz-box-shadow: 0px 0px 4px #222;
+        -webkit-box-shadow: 0px 0px 4px #222;
+        box-shadow: 0px 0px 4px #222;
+        background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #eeeeee), color-stop(1, #cccccc));
+        background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+        background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+        background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+        background-image: -o-linear-gradient(top, #eeeeee, #cccccc); }
 
 /*# sourceMappingURL=style.css.map */
