--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -98,7 +98,8 @@ body {
     .generalContent,
     .generalContentSearchUsers,
     .generalContentSeeInvitation,
-    .generalContentMyFriends {
+    .generalContentMyFriends,
+    .generalContentProductSearch {
         background-color: $color-font-content-gray;
         width: 80%;
         margin: 0px auto;
