--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,8 +46,8 @@ body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; height: 40px; border-radius: 5px; margin-top: 5px; line-height: 35px; box-shadow: inset -6px -6px 5px 0px #656565; }
 body .menuDiv ul .titleMenu ul li div { width: auto; padding-left: 15px; }
 body .menuDiv ul a { color: black; text-decoration: none; }
-body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
-body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child, body .generalContentMyFriends h1:first-child { text-align: center; }
+body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends, body .generalContentProductSearch { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
+body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child, body .generalContentMyFriends h1:first-child, body .generalContentProductSearch h1:first-child { text-align: center; }
 
 .msgInfo { position: fixed; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; }
 
@@ -94,3 +94,10 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentMyFriends .content .invitationType .oneUser img, .generalContentSeeInvitation .content .invitationType .oneUser img { display: block; margin: 0px auto; }
 .generalContentMyFriends .content .invitationType .oneUser span, .generalContentSeeInvitation .content .invitationType .oneUser span { font-size: 24px; font-weight: bold; text-align: center; display: block; color: black; }
 .generalContentMyFriends .content .invitationType .oneUser span img, .generalContentSeeInvitation .content .invitationType .oneUser span img { cursor: pointer; display: inline-block; vertical-align: middle; width: 18px; }
+
+.generalContentProductSearch { text-align: center; }
+.generalContentProductSearch .resultSearch { margin-top: 50px; font-size: 24px; font-weight: bold; }
+.generalContentProductSearch .resultSearch .oneProduct { width: 20%; display: inline-block; padding-bottom: 50px; }
+.generalContentProductSearch .resultSearch .oneProduct img { display: block; margin: 0px auto; cursor: pointer; }
+.generalContentProductSearch .resultSearch .oneProduct span img { cursor: pointer; display: inline-block; vertical-align: middle; padding-bottom: 7px; padding-left: 10px; }
+.generalContentProductSearch .resultSearch .oneProduct span[title]:hover:before { cursor: default; content: attr(title); margin-left: 0px; margin-top: 0px; position: absolute; z-index: 20; white-space: nowrap; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; -moz-box-shadow: 0px 0px 4px #222; -webkit-box-shadow: 0px 0px 4px #222; box-shadow: 0px 0px 4px #222; background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #eeeeee), color-stop(1, #cccccc)); background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc); background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -ms-linear-gradient(top, #eeeeee, #cccccc); background-image: -o-linear-gradient(top, #eeeeee, #cccccc); }
