--- a/public/stylesheets/sass/_productSearch.scss
+++ b/public/stylesheets/sass/_productSearch.scss
@@ -1,6 +1,12 @@
 .generalContentProductSearch {
     text-align: center;
 
+    .formSearchProduct {
+        input,
+        select {
+            display: inline-block;
+        }
+    }
 
     .resultSearch {
         margin-top: 50px;
