--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -8,8 +8,19 @@
     <div class='generalContentProductSearch'>
         <h1>Rechercher un produit</h1>
 
-        <div>
+        <div class='formSearchProduct'>
             <input type='text' placeholder='Nom ou code EAN' class='inputSearch'/>
+            <select class='searchIndex'>
+                <option value='All'>Tout</option>
+                <option value='Jewelry'>Bijoux</option>
+                <option value='DVD'>DVD</option>
+                <option value='Electronics'>Electroniques</option>
+                <option value='VideoGames'>Jeux vidéos</option>
+                <option value='Toys'>Jouets</option>
+                <option value='Books'>Livres</option>
+                <option value='Music'>Musiques</option>
+                <option value='Apparel'>Vêtements</option>
+            </select>
         </div>
 
         <div class='resultSearch'>Aucun produit trouvé !</div>
