--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -24,6 +24,20 @@
         </div>
 
         <div class='resultSearch'>Aucun produit trouvé !</div>
+
+        <div class='popin'></div>
+        <div class='contentPopin'>
+            <div class='left'>
+                <img class='imgProductDetail'>
+                <div class='imagesProduct'>
+                    test
+                </div>
+            </div>
+            <div class='right'>
+                Informations
+            </div>
+        </div>
     </div>
+
 
 {% endblock %}
