--- a/public/stylesheets/sass/_productSearch.scss
+++ b/public/stylesheets/sass/_productSearch.scss
@@ -32,6 +32,10 @@
                     padding-left: 10px;
                 }
             }
+            
+            div {
+                display: none;
+            }
 
             span[title]:hover:before {
                 cursor: default;
@@ -57,4 +61,43 @@
         }
     }
 
+    .popin {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        background-color: rgba(9, 45, 61,0.9);
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+    .contentPopin {
+        width: 60%;
+        height: 60%;
+        background-color: $color-font-content-gray;
+        position: fixed;
+        top: 20%;
+        left: 20%;
+        z-index: 2;
+
+        .left {
+            border: 1px solid black;
+            width: 30%;
+            display: inline-block;
+
+            .imgProductDetail {
+                width: 60%;
+            }
+
+            .imagesProduct {
+                border: 1px solid black;
+            }
+        }
+        .right {
+            border: 1px solid black;
+            width: 69%;
+            display: inline-block;
+            vertical-align: top;
+        }
+    }
 }
+
