--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,6 +33,7 @@ select { display: block; height: 34px; padding: 6px 12px; font-size: 14px; line-
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
+body .popin, body .contentPopin { display: none; }
 body header { font-family: 'librarize'; margin-left: auto; margin-right: auto; text-align: center; font-size: 60px; }
 body header .nameOrganization { display: inline-block; color: #FFFFFF; }
 body header .nameOrganization:before { content: ""; }
@@ -103,4 +104,11 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentProductSearch .resultSearch .oneProduct { width: 20%; display: inline-block; padding-bottom: 50px; }
 .generalContentProductSearch .resultSearch .oneProduct img { display: block; margin: 0px auto; cursor: pointer; }
 .generalContentProductSearch .resultSearch .oneProduct span img { cursor: pointer; display: inline-block; vertical-align: middle; padding-bottom: 7px; padding-left: 10px; }
+.generalContentProductSearch .resultSearch .oneProduct div { display: none; }
 .generalContentProductSearch .resultSearch .oneProduct span[title]:hover:before { cursor: default; content: attr(title); margin-left: 0px; margin-top: 0px; position: absolute; z-index: 20; white-space: nowrap; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; -moz-box-shadow: 0px 0px 4px #222; -webkit-box-shadow: 0px 0px 4px #222; box-shadow: 0px 0px 4px #222; background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #eeeeee), color-stop(1, #cccccc)); background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc); background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -ms-linear-gradient(top, #eeeeee, #cccccc); background-image: -o-linear-gradient(top, #eeeeee, #cccccc); }
+.generalContentProductSearch .popin { width: 100%; height: 100%; position: fixed; background-color: rgba(9, 45, 61, 0.9); top: 0; left: 0; z-index: 1; }
+.generalContentProductSearch .contentPopin { width: 60%; height: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; }
+.generalContentProductSearch .contentPopin .left { border: 1px solid black; width: 30%; display: inline-block; }
+.generalContentProductSearch .contentPopin .left .imgProductDetail { width: 60%; }
+.generalContentProductSearch .contentPopin .left .imagesProduct { border: 1px solid black; }
+.generalContentProductSearch .contentPopin .right { border: 1px solid black; width: 69%; display: inline-block; vertical-align: top; }
