--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -29,9 +29,7 @@
         <div class='contentPopin'>
             <div class='left'>
                 <img class='imgProductDetail'>
-                <div class='imagesProduct'>
-                    test
-                </div>
+                <div class='imagesProduct'></div>
             </div>
             <div class='right'>
                 Informations
