--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,8 +107,9 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentProductSearch .resultSearch .oneProduct div { display: none; }
 .generalContentProductSearch .resultSearch .oneProduct span[title]:hover:before { cursor: default; content: attr(title); margin-left: 0px; margin-top: 0px; position: absolute; z-index: 20; white-space: nowrap; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; -moz-box-shadow: 0px 0px 4px #222; -webkit-box-shadow: 0px 0px 4px #222; box-shadow: 0px 0px 4px #222; background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #eeeeee), color-stop(1, #cccccc)); background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc); background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -ms-linear-gradient(top, #eeeeee, #cccccc); background-image: -o-linear-gradient(top, #eeeeee, #cccccc); }
 .generalContentProductSearch .popin { width: 100%; height: 100%; position: fixed; background-color: rgba(9, 45, 61, 0.9); top: 0; left: 0; z-index: 1; }
-.generalContentProductSearch .contentPopin { width: 60%; height: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; }
-.generalContentProductSearch .contentPopin .left { border: 1px solid black; width: 30%; display: inline-block; }
-.generalContentProductSearch .contentPopin .left .imgProductDetail { width: 60%; }
-.generalContentProductSearch .contentPopin .left .imagesProduct { border: 1px solid black; }
-.generalContentProductSearch .contentPopin .right { border: 1px solid black; width: 69%; display: inline-block; vertical-align: top; }
+.generalContentProductSearch .contentPopin { width: 60%; height: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; }
+.generalContentProductSearch .contentPopin .left { border: 1px solid black; display: inline-block; width: 35%; height: 100%; }
+.generalContentProductSearch .contentPopin .left .imgProductDetail { height: 80%; max-width: 100%; }
+.generalContentProductSearch .contentPopin .left .imagesProduct { margin-top: 20px; }
+.generalContentProductSearch .contentPopin .left .imagesProduct img { padding: 2px 5px; max-width: 22%; max-height: 55px; }
+.generalContentProductSearch .contentPopin .right { border: 1px solid black; width: 64%; display: inline-block; vertical-align: top; }
