--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -28,7 +28,10 @@
         <div class='popin'></div>
         <div class='contentPopin'>
             <div class='left'>
-                <img class='imgProductDetail'>
+                <div class='principalImg'>
+                    <div class='vAlign'></div>
+                    <img class='imgProductDetail'>
+                </div>
                 <div class='imagesProduct'></div>
             </div>
             <div class='right'>
