--- a/public/stylesheets/sass/_productSearch.scss
+++ b/public/stylesheets/sass/_productSearch.scss
@@ -86,23 +86,38 @@
             width: 35%;
             height: 100%;
 
-            .imgProductDetail {
-                height: 80%;
-                max-width: 100%;
+            .principalImg {
+                height: 85%;
+                width: 100%;
+                margin-bottom: 5%;
+
+                .vAlign {
+                    display: inline-block;
+                    height: 50%;
+                }
+
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin-left: -5px;
+                }
             }
 
             .imagesProduct {
-                margin-top: 20px;
                 img {
                     padding: 2px 5px;
                     max-width: 22%;
-                    max-height: 55px;
+                    max-height: 50px;
+                    cursor: pointer;
                 }
             }
         }
+
         .right {
             border: 1px solid black;
-            width: 64%;
+            width: 63%;
             display: inline-block;
             vertical-align: top;
         }
