--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,7 +109,8 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentProductSearch .popin { width: 100%; height: 100%; position: fixed; background-color: rgba(9, 45, 61, 0.9); top: 0; left: 0; z-index: 1; }
 .generalContentProductSearch .contentPopin { width: 60%; height: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; }
 .generalContentProductSearch .contentPopin .left { border: 1px solid black; display: inline-block; width: 35%; height: 100%; }
-.generalContentProductSearch .contentPopin .left .imgProductDetail { height: 80%; max-width: 100%; }
-.generalContentProductSearch .contentPopin .left .imagesProduct { margin-top: 20px; }
-.generalContentProductSearch .contentPopin .left .imagesProduct img { padding: 2px 5px; max-width: 22%; max-height: 55px; }
-.generalContentProductSearch .contentPopin .right { border: 1px solid black; width: 64%; display: inline-block; vertical-align: top; }
+.generalContentProductSearch .contentPopin .left .principalImg { height: 85%; width: 100%; margin-bottom: 5%; }
+.generalContentProductSearch .contentPopin .left .principalImg .vAlign { display: inline-block; height: 50%; }
+.generalContentProductSearch .contentPopin .left .principalImg img { max-width: 100%; max-height: 100%; display: inline-block; vertical-align: middle; margin-left: -5px; }
+.generalContentProductSearch .contentPopin .left .imagesProduct img { padding: 2px 5px; max-width: 22%; max-height: 50px; cursor: pointer; }
+.generalContentProductSearch .contentPopin .right { border: 1px solid black; width: 63%; display: inline-block; vertical-align: top; }
